--- a/bsdp-like_rt.html
+++ b/bsdp-like_rt.html
@@ -9,7 +9,7 @@
 	</head>
 	<body style="zoom:1;" id="overlay" class="hidden">
 	    <div class="scoreStats" style="bottom:0!important;border-radius:10px 10px 0px 0px!important;" id="scoreStats">
-	        <h2 class="time" id="song_time">Time</h2>
+	        <h2 class="time"><span id="song_time">Time</span>/<span id="song_length">Length</span></h2>
 	        <h2 class="score" id="score">Score</h2>
 	        <h2 class="accuracy" id="percentage">Accuracy</h2>
 	        <h2 class="combo" id="combo">Combo</h2>
